--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             </li>
           </ul>
         </div>
+        <div class="hamburger">
+          <img src="./images/icon-hamburger.svg" alt="" />
+        </div>
       </div>
       <div class="catch-phrase">
         <h1>
@@ -53,10 +56,12 @@
       <div class="description-text-container">
         <h2>The leader in interactive VR</h2>
         <p>
-          Founded in 2011, Loopstudios has been producing world-class <br />
+          Founded in 2011, Loopstudios has been producing world-class
+          <br class="break" />
           virtual reality projects for some of the best companies around the
-          <br />
-          globe. Our award-winning creations have transformed <br />
+          <br class="break" />
+          globe. Our award-winning creations have transformed
+          <br class="break" />
           businesses through digital experiences that bind to their brand.
         </p>
       </div>
@@ -100,6 +105,60 @@
           alt="Image fisheye optic"
         />
       </div>
+      <div class="img-grid-container-mobile">
+        <div>
+          <img
+            src="./images/mobile/image-deep-earth.jpg"
+            alt="Image with Earth"
+          />
+          <span>Deep Earth</span>
+        </div>
+        <div>
+          <img
+            src="./images/mobile/image-night-arcade.jpg"
+            alt="Image Arcade"
+          /><span>Night Arcade</span>
+        </div>
+        <div>
+          <img
+            src="./images/mobile/image-soccer-team.jpg"
+            alt="Image with soccer Player"
+          /><span>Soccer Team vr</span>
+        </div>
+        <div>
+          <img src="./images/mobile/image-grid.jpg" alt="Image with car" /><span
+            >The grid</span
+          >
+        </div>
+        <div>
+          <img
+            src="./images/mobile/image-from-above.jpg"
+            alt="Image with streets"
+          />
+          <span class="span-big">From up above vr</span>
+        </div>
+        <div>
+          <img
+            src="./images/mobile/image-pocket-borealis.jpg"
+            alt="Image with borealis"
+          />
+          <span>Rocket borealis</span>
+        </div>
+        <div>
+          <img
+            src="./images/mobile/image-curiosity.jpg"
+            alt="Image with mars-rover"
+          />
+          <span>The curiosity</span>
+        </div>
+        <div>
+          <img
+            src="./images/mobile/image-fisheye.jpg"
+            alt="Image fisheye optic"
+          />
+          <span>Make it fisheye</span>
+        </div>
+      </div>
     </div>
 
     <!-- FOOTER_SECTION -->
@@ -110,13 +169,22 @@
             <img src="./images/logo.svg" alt="Loopstudios Logo" />
           </div>
           <div class="social-container">
-            <li>
-              <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook-Logo" /></a>
-              <a href="#"><img src="./images/icon-twitter.svg" alt="Twitter-Logo" /></a>
-              <a href="#"><img src="./images/icon-pinterest.svg" alt="Pinterest-Logo" /></a>
-              <a href="#"><img src="./images/icon-instagram.svg" alt="Instagram-Logo" /></a>
-             </li>
-          </ul>
+            <ul>
+              <li>
+                <a href="#"
+                  ><img src="./images/icon-facebook.svg" alt="Facebook-Logo"
+                /></a>
+                <a href="#"
+                  ><img src="./images/icon-twitter.svg" alt="Twitter-Logo"
+                /></a>
+                <a href="#"
+                  ><img src="./images/icon-pinterest.svg" alt="Pinterest-Logo"
+                /></a>
+                <a href="#"
+                  ><img src="./images/icon-instagram.svg" alt="Instagram-Logo"
+                /></a>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="nav-copyright-container">
