added hamburger-menu functionality via JS and finished the project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <img src="./images/logo.svg" alt="Loopstudios Logo" />
         </div>
         <div>
-          <ul>
+          <ul id="nav-bar">
             <li>
               <a href="#">About</a>
               <a href="#">Careers</a>
@@ -32,8 +32,12 @@
             </li>
           </ul>
         </div>
-        <div class="hamburger">
-          <img src="./images/icon-hamburger.svg" alt="" />
+        <div class="hamburger" id="hamburger-menu">
+          <img
+            class="hamburger-menu"
+            src="./images/icon-hamburger.svg"
+            alt=""
+          />
         </div>
       </div>
       <div class="catch-phrase">
@@ -212,5 +216,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Tom</a>.
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
